--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ img {
   left: 13px;
   width: 20px;
   height: 20px;
-  background: #eeeeee url("../img/index/spritesheet.png") no-repeat;
+  background: transparent url("../img/index/spritesheet.png") no-repeat;
   background-position: -40px -10px;
 }
 /*index-content*/
@@ -371,8 +371,8 @@ width: 1100px;
   justify-content: space-between;
   position: relative;
 
-  margin-bottom: 0px;
-padding-top: 40px;
+
+padding-top: 34px;
 border-top: 2px solid #eeeeee;
 }
 .left-side {
@@ -578,7 +578,7 @@ background-position:  10px  20px;
   background: #ffffff url("../img/index/map.jpg") no-repeat;
   height: 417px;
   width: 100%;
-  margin-top: 80px;
+  margin-top: 75px;
   margin-bottom: 70px;
 }
 .contacts-container {
