--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
 .main-header {
   background-color: #eeeeee;
 
-  padding-top: 50px;
+  padding-top: 32px;
   height: 545px;
 
   box-sizing: border-box;
@@ -112,7 +112,7 @@ img {
 .basket {
   position: relative;
   display: inline-block;
-    padding: 0px 0px 0px 50px;
+    padding: 0px 0px 0px 52px;
   font-size: 16px;
   line-height: 30px;
   vertical-align: top;
@@ -293,9 +293,9 @@ font-family: "Roboto", "Arial", sans-serif;
   display: flex;
 width: 1100px;
   justify-content: space-between;
-  margin-bottom: 85px;
+  margin-bottom: 82px;
 
-  margin-top: 80px;
+  margin-top: 63px;
 
 }
 .product {
@@ -324,7 +324,7 @@ width: 1100px;
 .product .btn {
   display:block;
   width:160px;
-  padding:12px 0;
+  padding:11px 0;
   margin-top: 18px;
   font-size:16px;
   font-weight: medium;
@@ -379,7 +379,7 @@ border-top: 2px solid #eeeeee;
   flex-direction: column;
   justify-content: space-between;
   width: 660px;
-  padding-top: 32px;
+  padding-top: 37px;
 }
 .second-title {
 
@@ -405,7 +405,8 @@ border-top: 2px solid #eeeeee;
   color: #283136;
 
   font-family: "Roboto", "Arial", sans-serif;
-  margin-bottom: 15px;
+  margin-top: 32px;
+  margin-bottom: 40px;
 }
 .content-list ul {
   padding: 0;
@@ -427,7 +428,7 @@ border-top: 2px solid #eeeeee;
 .list-item::before {
   content: "";
   position: absolute;
-  top: 10px;
+  top: 12px;
   left: 10px;
   width: 20px;
   height: 20px;
@@ -445,7 +446,7 @@ border-top: 2px solid #eeeeee;
 }
 .logo-img {
   width: 360px;
-
+padding-top: 2px;
   margin-bottom: 15px;
 }
 .right-side-title {
@@ -512,7 +513,7 @@ border-top: 2px solid #eeeeee;
 
 position: relative;
   height: 185px;
-  margin-top: 45px;
+  margin-top: 48px;
   margin-bottom: 30px;
 padding-bottom: 30px;
   padding-top: 30px;
@@ -525,7 +526,7 @@ background-position:  10px  20px;
 .p1 {
   opacity: 0.2;
   position: absolute;
-  top: 60px;
+  top: 62px;
   left: 32px;
 }
 .p1:hover {
@@ -537,7 +538,7 @@ background-position:  10px  20px;
 .p2 {
   opacity: 0.2;
   position: absolute;
-  top: 45px;
+  top: 49px;
   left: 325px;
 }
 .p2:hover {
@@ -561,7 +562,7 @@ background-position:  10px  20px;
 .p4 {
   opacity: 0.2;
   position: absolute;
-  top: 50px;
+  top: 52px;
   left: 945px;
 }
 .p4:hover {
@@ -577,7 +578,7 @@ background-position:  10px  20px;
   background: #ffffff url("../img/index/map.jpg") no-repeat;
   height: 417px;
   width: 100%;
-  margin-top: 75px;
+  margin-top: 80px;
   margin-bottom: 70px;
 }
 .contacts-container {
@@ -637,7 +638,7 @@ background-position:  10px  20px;
   background-color: #d7373b;
   color: #dc4f53;
 }
-.contact-button a {
+.contact-link {
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
@@ -647,6 +648,7 @@ background-position:  10px  20px;
 }
 
 /*pop up*/
+/*
 @keyframes bounce {
   0%   {
     transform: translateY(-2000px);
@@ -672,7 +674,7 @@ background-position:  10px  20px;
     transform: translateX(10px);
   }
 }
-
+*/
 .modal-content {
   display: none;
 
@@ -711,9 +713,13 @@ margin-top: 13px;
   border: 0;
   cursor: pointer;
 }
-
+/*
 .modal-error {
   animation: shake 0.6s;
+}
+*/
+.write-us-form {
+  padding-top: 2px;
 }
 .modal-content-close:hover{
   opacity: 1;
@@ -736,15 +742,13 @@ margin-top: 13px;
   width: 360px;
   height:  49px;
   border: 2px solid #d7dcde;
+  color: #d7dcde;
 }
 .modal-content .name:hover {
-border: 2px solid #d7dcde;
-color: #d7dcde;
-}
-.modal-content .name:active {
-border: 2px solid #b4b9bb ;
+border: 2px solid #b4b9bb;
 color: #b4b9bb;
 }
+
 .modal-content .name:focus {
 border: 2px solid #000000 ;
  color: #000000;
@@ -762,16 +766,15 @@ border: 2px solid #e74246 ;
   margin-bottom: 10px;
   width: 360px;
   height:  49px;
+  border: 2px solid #d7dcde;
+  color: #d7dcde;
 }
 
 .modal-content .email:hover {
 border: 2px solid #d7dcde;
 color: #d7dcde;
 }
-.modal-content .email:active {
-border: 2px solid #b4b9bb ;
-color: #b4b9bb;
-}
+
 .modal-content .email:focus {
 border: 2px solid #000000 ;
  color: #000000;
@@ -780,21 +783,7 @@ border: 2px solid #000000 ;
 border: 2px solid #e74246 ;
  color: #e74246;
 }
-.write-us-form input[type="text"],{
-  display: inline-block;
-  width: 360px;
-  min-height: 45px;
-  margin-right: 20px;
-  margin-bottom: 10px;
-  padding: 15px 130px 15px 15px;
-
-  font-size: 16px;
-  line-height: 18px;
-  font-family: "Roboto", "Arial", sans-serif;
-  color: #444444;
-  border: 2px solid #444444;
-}
-.write-us-form input[type="text-area"] {
+.letter {
   width: 760px;
   text-align: left;
   min-height: 120px;
@@ -805,14 +794,22 @@ border: 2px solid #e74246 ;
   font-size: 16px;
   line-height: 18px;
   font-family: "Roboto", "Arial", sans-serif;
-  color: #444444;
-  border: 2px solid #444444;
+  border: 2px solid #d7dcde;
+  color: #d7dcde;
   margin-bottom: 45px;
   padding: 15px 130px 15px 15px;
 }
-.write-us-form input:focus {
-  color: black;
-  border-color: black;
+.letter:hover {
+  border: 2px solid #b4b9bb;
+  color: #b4b9bb;
+}
+.letter:focus {
+border: 2px solid #000000 ;
+ color: #000000;
+}
+.letter:invalid {
+border: 2px solid #e74246 ;
+ color: #e74246;
 }
 .write-us-form .btn{
   display:block;
