--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
 .main-header {
   background-color: #eeeeee;
 
-  padding-top: 32px;
+  padding-top: 50px;
   height: 545px;
 
   box-sizing: border-box;
@@ -69,8 +69,10 @@ img {
 }
 .main-navigation li {
 
-  margin-left: 10px;
-  margin-right: 10px;
+
+
+  padding-right: 36px;
+padding-left: 10px;
   font-size: 16px;
   line-height: 30px;
   font-weight: bold;
@@ -83,7 +85,7 @@ img {
   color: #000000;
 
 
-  padding-right: 20px;
+
 }
 .main-navigation a:hover {
   color:#fb565a;
@@ -100,8 +102,9 @@ img {
 .main-navigation .active::after {
   content: "";
   position: absolute;
-
-  width: 80%;
+  top: 33px;
+      left: 10px;
+  width: 60%;
   height: 3px;
 
   background-color: #fb565a;
@@ -112,7 +115,7 @@ img {
 .basket {
   position: relative;
   display: inline-block;
-    padding: 0px 0px 0px 52px;
+    padding: 8px 0px 0px 52px;
   font-size: 16px;
   line-height: 30px;
   vertical-align: top;
@@ -130,7 +133,7 @@ img {
 .basket::before {
   content: "";
   position: absolute;
-  bottom: 1px;
+  bottom: 3px;
   left: 13px;
   width: 20px;
   height: 20px;
@@ -162,6 +165,7 @@ img {
 }
 .slider-controls label{
     display:inline-block;
+    position: relative;
     width: 20px;
     height: 20px;
     margin:0 5px;
@@ -175,10 +179,12 @@ img {
 #btn-1:checked ~ .slider-controls label[for="btn-1"],
 #btn-2:checked ~ .slider-controls label[for="btn-2"],
 #btn-3:checked ~ .slider-controls label[for="btn-3"] {
-  border: 5px solid #fff;
-    background: #ababab;
-
+  border: 5px solid white;
+  border-radius: 50%;
+background: url("../img/index/spritesheet.png") no-repeat;
+background-position: -10px -10px;
 }
+
 .slide{
     position:absolute;
     top:0;
@@ -197,9 +203,7 @@ img {
 .slide-title{
     font-size: 55px;
     line-height: 55px;
-font-family: "Roboto", "Arial", sans-serif;
-
-    color: black;
+    font-weight: bold;
     margin-bottom: 26px;
 }
 .slide-text p{
@@ -273,7 +277,7 @@ font-family: "Roboto", "Arial", sans-serif;
   height: 356px;
 
 
-  box-sizing: border-box;
+
 }
 .main-title {
   display: inline-block;
@@ -281,12 +285,12 @@ font-family: "Roboto", "Arial", sans-serif;
   line-height: 55px;
   color: #000000;
 
-  font-family: "Roboto", "Arial", sans-serif;
+
   width: 100%;
   text-align: center;
-  padding-bottom: 118px;
+
   margin-top: 70px;
-  padding-left: 30px;
+
 }
 /* products*/
 .products {
@@ -295,7 +299,7 @@ width: 1100px;
   justify-content: space-between;
   margin-bottom: 82px;
 
-  margin-top: 63px;
+  margin-top: 80px;
 
 }
 .product {
@@ -375,9 +379,6 @@ padding-top: 34px;
 border-top: 2px solid #eeeeee;
 }
 .left-side {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 660px;
   padding-top: 37px;
 }
@@ -387,26 +388,17 @@ border-top: 2px solid #eeeeee;
   line-height: 45px;
   color: #000000;
 
-  font-family: "Roboto", "Arial", sans-serif;
+
   margin: 0px;
 }
 .small-title {
-  font-size: 16px;
-  line-height: 24px;
-  color: #283136;
-  font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
+  display: block;
+
   text-transform: uppercase;
    margin-bottom: 22px;
 }
 .left-side p {
-  font-size: 16px;
-  line-height: 24px;
-  color: #283136;
-
-  font-family: "Roboto", "Arial", sans-serif;
-  margin-top: 32px;
-  margin-bottom: 40px;
+  margin: 32px 0 40px;
 }
 .content-list ul {
   padding: 0;
@@ -426,15 +418,15 @@ border-top: 2px solid #eeeeee;
   padding: 0px 0px 15px 37px;
 }
 .list-item::before {
-  content: "";
-  position: absolute;
-  top: 12px;
-  left: 10px;
-  width: 20px;
-  height: 20px;
-  background: #ffffff url("../img/index/red_line.png") no-repeat;
-
-}
+    display: block;
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 0px;
+    width: 24px;
+    height: 2px;
+    background-color: #fb565a;
+  }
 
 .right-side {
   display: flex;
@@ -450,14 +442,13 @@ padding-top: 2px;
   margin-bottom: 15px;
 }
 .right-side-title {
-  font-size: 16px;
-  line-height: 24px;
-  width: 330px;
-  padding-left: 17px;
+
+
+
+
   color: #000000;
-  font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
-  width: 360px;
+
+
 
   text-transform: uppercase;
 }
@@ -519,15 +510,39 @@ padding-bottom: 30px;
   padding-top: 30px;
   border-top: 2px solid #eeeeee;
   border-bottom:  2px solid #eeeeee;
-background: white url("../img/index/border") no-repeat;
-background-position:  10px  20px;
-}
 
+}
+.partner {
+  width: 260px;
+    margin-left: 21px;
+    margin-right: 20px;
+
+    height: 53px;
+    margin-top: 33px;
+    border-right: 2px solid #eeeeee;
+}
+.partner2 {
+  width: 260px;
+  margin-left: 21px;
+  margin-right: 20px;
+
+    height: 53px;
+    margin-top: 33px;
+    border-right: 2px solid #eeeeee;
+}
+.partner3 {
+  width: 280px;
+    height: 53px;
+    margin-top: 33px;
+    border-right: 2px solid #eeeeee;
+}
 .p1 {
   opacity: 0.2;
   position: absolute;
   top: 62px;
   left: 32px;
+
+
 }
 .p1:hover {
   opacity: 1;
@@ -581,6 +596,8 @@ background-position:  10px  20px;
   margin-top: 80px;
   margin-bottom: 70px;
 }
+
+
 .contacts-container {
   display: flex;
   flex-direction: column;
@@ -592,6 +609,23 @@ background-position:  10px  20px;
   height: 310px;
   width: 320px;
   padding: 52px 50px 50px 50px;
+  background-color: #ffffff;
+
+}
+.map-catalog {
+  margin-top: 59px;
+}
+.contacts-container-catalog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  position: absolute;
+  top:  52px;
+  left: 140px;
+  height: 310px;
+  width: 320px;
+  padding: 50px 50px 50px 50px;
   background-color: #ffffff;
 
 }
@@ -613,10 +647,7 @@ background-position:  10px  20px;
 .contacts-infotmation-adress {
   font-size: 16px;
   line-height: 18px;
-  color: #283136;
-  font-weight: normal;
-  font-family: "Roboto", "Arial", sans-serif;
-  margin-bottom: 14px;
+  margin-bottom: 18px;
 }
 .tel {
   font-size: 16px;
@@ -631,14 +662,7 @@ background-position:  10px  20px;
   background-color: #fb565a;
  margin-top: 40px;
 }
-.contact-button:hover {
-  background-color: #e74246;
-}
-.contact-button:active {
-  background-color: #d7373b;
-  color: #dc4f53;
-}
-.contact-link {
+.contact-button a {
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
@@ -646,35 +670,16 @@ background-position:  10px  20px;
   text-transform: uppercase;
   text-decoration: none;
 }
+.contact-button:hover {
+  background-color: #e74246;
+}
+.contact-button:active {
+  background-color: #d7373b;
+  color: #dc4f53;
+}
+
 
 /*pop up*/
-/*
-@keyframes bounce {
-  0%   {
-    transform: translateY(-2000px);
-  }
-  70%  {
-    transform: translateY(30px);
-  }
-  90%  {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-@keyframes shake {
-  0%, 100% {
-    transform: translateX(0);
-  }
-  10%, 30%, 50%, 70%, 90% {
-    transform: translateX(-10px);
-  }
-  20%, 40%, 60%, 80% {
-    transform: translateX(10px);
-  }
-}
-*/
 .modal-content {
   display: none;
 
@@ -697,7 +702,10 @@ margin-left: -480px;
   display: flex;
   justify-content: space-between;
   width: 760px;
-  margin-bottom: 30px;
+  margin-bottom: 22px;
+}
+.top_field label {
+  margin-bottom: 2px;
 }
 .modal-content-close {
   position: absolute;
@@ -713,13 +721,9 @@ margin-top: 13px;
   border: 0;
   cursor: pointer;
 }
-/*
-.modal-error {
-  animation: shake 0.6s;
-}
-*/
+
 .write-us-form {
-  padding-top: 2px;
+
 }
 .modal-content-close:hover{
   opacity: 1;
@@ -730,7 +734,7 @@ margin-top: 13px;
 
 .modal-content-title {
   margin: 0px;
-  margin-bottom: 40px;
+  margin-bottom: 39px;
   font-size: 45px;
   line-height: 45px;
   font-weight: medium;
@@ -739,10 +743,14 @@ margin-top: 13px;
 .modal-content .name {
 
   margin-bottom: 10px;
+  margin-right: 40px;
+  margin-top: 7px;
   width: 360px;
   height:  49px;
   border: 2px solid #d7dcde;
   color: #d7dcde;
+  padding-left: 16px;
+  font-size: 16px;
 }
 .modal-content .name:hover {
 border: 2px solid #b4b9bb;
@@ -750,7 +758,7 @@ color: #b4b9bb;
 }
 
 .modal-content .name:focus {
-border: 2px solid #000000 ;
+outline: 2px solid #000000 ;
  color: #000000;
 }
 .modal-content .name:invalid {
@@ -762,12 +770,14 @@ border: 2px solid #e74246 ;
   margin-bottom: 5px;
 }
 .modal-content .email {
-
+margin-top: 7px;
   margin-bottom: 10px;
   width: 360px;
   height:  49px;
   border: 2px solid #d7dcde;
   color: #d7dcde;
+  padding-left: 16px;
+  font-size: 16px;
 }
 
 .modal-content .email:hover {
@@ -776,7 +786,7 @@ color: #d7dcde;
 }
 
 .modal-content .email:focus {
-border: 2px solid #000000 ;
+outline: 2px solid #000000 ;
  color: #000000;
 }
 .modal-content .email:invalid {
@@ -785,26 +795,25 @@ border: 2px solid #e74246 ;
 }
 .letter {
   width: 760px;
-  text-align: left;
-  min-height: 120px;
-  margin-right: 0px;
-  margin-bottom: 45px;
-  padding: 15px 130px 15px 15px;
+
+font-size: 16px;
+   padding: 12px 0px 86px 14px;
 
   font-size: 16px;
-  line-height: 18px;
-  font-family: "Roboto", "Arial", sans-serif;
+
+
   border: 2px solid #d7dcde;
   color: #d7dcde;
-  margin-bottom: 45px;
-  padding: 15px 130px 15px 15px;
+  margin-bottom: 46px;
+margin-top: 3px;
 }
+
 .letter:hover {
   border: 2px solid #b4b9bb;
   color: #b4b9bb;
 }
 .letter:focus {
-border: 2px solid #000000 ;
+outline: 2px solid #000000 ;
  color: #000000;
 }
 .letter:invalid {
@@ -815,16 +824,16 @@ border: 2px solid #e74246 ;
   display:block;
   width:260px;
   padding:15px 0;
-
+border: none;
   font-size:16px;
-  font-weight: medium;
+
   color:white;
   text-transform:uppercase;
   text-align:center;
   text-decoration:none;
   background:#fb565a;
   border-radius:3px;
-  margin-top: 3px;
+
 }
 .write-us-form .btn:hover {
   background:#e74246;
@@ -849,7 +858,7 @@ border-top: 2px solid #eeeeee;
   width: 260px;
 }
 .range-sort-price {
-  font-size: 18px;
+  font-size: 19px;
   line-height: 30px;
   color: #000000;
   font-weight: bold;
@@ -859,7 +868,7 @@ border-top: 2px solid #eeeeee;
 }
 .range-filter {
   width: 260px;
-  margin-bottom: 60px;
+  margin-bottom: 56px;
   margin-top: 46px;
 }
 .range-controls {
@@ -869,8 +878,9 @@ border-top: 2px solid #eeeeee;
   padding-right: 20px;
   padding-left: 20px;
   margin-bottom: 15px;
-  border-radius: 5px;
+  border-radius: 1px;
   background: #f1f1f1;
+
 }
 
 .range-controls .scale {
@@ -899,47 +909,59 @@ border-top: 2px solid #eeeeee;
 
 .range-controls .toggle-min {
   left: 20px;
+  box-sizing: content-box;
 }
 
 .range-controls .toggle-max {
   left: 160px;
+  box-sizing: content-box;
 }
 
 .price-controls {
-  font-size: 0;
+  display: flex;
+  justify-content: space-between;
+
+  padding-left: 2px;
 }
 
-.price-controls label {
-  font-size: 16px;
-  display: inline-block;
-  width: 50%;
-}
 
-.max-price {
-  text-align: right;
-}
 
 .price-controls input {
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 16px;
-  width: 80px;
-  margin-left: 10px;
-  padding: 8px 10px;
+  width: 78px;
+
+margin-left: 10px;
+padding: 9px 10px 9px 10px;
   text-align: center;
   color: #283136;
   border: none;
-  border-radius: 5px;
+  border-radius: 1px;
   background: #f1f1f1;
 }
+
+.price-controls .min-price {
+  display: inline-block;
+font-size: 18px;
+margin-right: 28px;
+
+}
+.price-controls .max-price {
+  display: inline-block;
+font-size: 18px;
+margin: 0px;
+}
+
 .type-of-net{
 position: relative;
 
   cursor: pointer;
   color: #4d4d4d;
+  margin-bottom: 16px;
 }
 
 .net-name {
-
+margin-bottom: 14px;
   font-size: 18px;
   line-height: 30px;
   color: #000000;
@@ -952,8 +974,8 @@ position: relative;
 }
 .type-of-net input[type="radio"] + .radio-indicator {
   position: absolute;
-  top: -2px;
-  left: 0;
+  top: -3px;
+  left: 3px;
 
   width: 24px;
   height: 24px;
@@ -1008,9 +1030,6 @@ position: relative;
   text-transform: uppercase;
 }
 .features-label {
-  width: 24px;
-    height: 24px;
-
     position: relative;
 }
 .features-label input[type="checkbox"] {
@@ -1022,17 +1041,19 @@ position: relative;
 .features-label input[type="checkbox"] + .checkbox-indicator {
   position: absolute;
   top: -2px;
-  left: 0;
+  left: -38px;
 cursor: pointer;
   width: 24px;
   height: 24px;
 
-  background: url("../img/index/sprite/checkbox_off.png")
+  background: url("../img/index/spritesheet_2.png") no-repeat;
+  background-position: -10px -10px;
 }
 .features-label input[type="checkbox"]:checked + .checkbox-indicator {
 
 
- background: url("../img/index/sprite/checkbox_on.png") no-repeat;
+ background: url("../img/index/spritesheet_2.png") no-repeat;
+ background-position: -53px -10px;
 }
 
 .features ul {
@@ -1056,12 +1077,12 @@ cursor: pointer;
 }
 .left-panel .btn {
   display:block;
-  width:260px;
-  padding:20px 0;
-margin-top: 35px;
+
+  padding:17px 90px;
+margin-top: 38px;
   font-size:16px;
   line-height: 18px;
-  font-weight: medium;
+
   color:  black;
   text-transform:uppercase;
   text-align:center;
@@ -1097,23 +1118,23 @@ margin-top: 35px;
 .sort-text {
   font-size: 18px;
   line-height: 18px;
-  color: #000000;
+
   font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
+
   text-transform: uppercase;
 }
 .catalog-sort ul {
   display: flex;
 position: relative;
-padding-right: 50px;
-
+padding-right: 64px;
+padding-top: 1px;
   margin: 0;
   list-style: none;
 }
 .catalog-sort ul:before {
   content: "";
   position: absolute;
-  top: 8px;
+  top: 5px;
   right: 18px;
   width: 20px;
   height: 20px;
@@ -1127,7 +1148,7 @@ padding-right: 50px;
 .catalog-sort ul:after {
   content: "";
   position: absolute;
-  top: 8px;
+  top: 5px;
   right: -9px;
   width: 20px;
   height: 20px;
@@ -1159,9 +1180,9 @@ opacity: 0.2;
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
-  opacity: 30%;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 3px;
+  padding-right: 23px;
+
 }
 
 .catalog-sort .active {
@@ -1181,7 +1202,7 @@ position: relative;
   height: 615px;
   padding-top: 40px;
  margin-bottom: 40px;
-  margin-right: 20px;
+
   background: white url("../img/catalog/browser.png") no-repeat;
   background-position: top;
 }
@@ -1205,55 +1226,54 @@ position: relative;
 .wrapper-block {
   position: absolute;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: block;
+  text-align: center;
   position: absolute;
   bottom: 0px;
   left: 0px;
   width:100%;
 
 
-  padding-bottom: 40px;
+padding: 15px   41px;
   margin: 0px;
   background-color: #eeeeee;
 }
+/*
 .wrapper-block {
   display: none;
 }
+*/
 .catalog-gallery-item:hover  .wrapper-block{
-  display: flex;
+  display: block;
 }
 .item-title {
   font-size: 18px;
-  line-height: 30px;
+
   color: #000000;
-  font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
+margin: 16px;
+
   text-transform: uppercase;
   text-decoration: none;
-  text-align: center;
 }
-.wrapper-block a  {
+.item-title a  {
 text-decoration: none;
+  color: #000000;
 }
 .wrapper-description {
   text-align: center;
-  font-size: 16px;
-  line-height: 18px;
+
   color: #666666;
-  font-weight: normal;
-  font-family: "Roboto", "Arial", sans-serif;
+
+
 }
 .wrapper-block .btn {
   display:block;
-  width:200px;
-  padding:10px 0;
-margin-top: 35px;
-  font-size:16px;
-  line-height: 18px;
-  font-weight: medium;
+
+    padding:13px 0px;
+  margin-top: 21px;
+  margin-bottom: 25px;
+  margin-right: 37px;
+  margin-left: 40px;
   color:white;
   text-transform:uppercase;
   text-align:center;
@@ -1283,7 +1303,7 @@ margin-top: 35px;
   .paginations li {
     display: inline-block;
     vertical-align: top;
-    margin-right: 10px;
+    margin-right: 12px;
 
   }
 .pag .btn {
@@ -1295,7 +1315,7 @@ margin-top: 35px;
   font-size: 16px;
   line-height: 18px;
   color: #000000;
-  font-weight: medium;
+  font-weight: bold;
   font-family: "Roboto", "Arial", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
@@ -1320,6 +1340,7 @@ margin-top: 35px;
 .pag .btn-big {
   width: 260px;
   margin-right: 0px;
+padding: 10px 107px 10px 104px;
 }
 
 /*footer*/
@@ -1330,13 +1351,12 @@ margin-top: 35px;
 }
 .main-footer-layout {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  padding-right: 200px;
+
+
 }
 .social-button {
   display: flex;
-  flex-direction: row;
+  margin-right: 140px;
   text-align: center;
   position: relative;
   width: 260px;
@@ -1378,6 +1398,7 @@ border-radius: 60%;
 .footer-information {
   display: flex;
       flex-direction: column;
+      order: 2;
 padding-top: 5px;
 padding-right: 20px;
 }
